// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField test1, onBlur 1`] = `
<UNDEFINED
  label="label"
  meta={Object {}}
>
  <Select2
    disabled={false}
    input={
      Object {
        "onBlur": [Function],
        "value": "",
      }
    }
    isClearable={false}
    isMulti={false}
    isSearchable={false}
    label="label"
    meta={Object {}}
    options={Array []}
  />
</UNDEFINED>
`;

exports[`SelectField test2, !onBlur 1`] = `
<UNDEFINED
  label="label"
  meta={Object {}}
>
  <Select2
    disabled={false}
    input={
      Object {
        "onBlur": null,
        "value": "",
      }
    }
    isClearable={false}
    isMulti={false}
    isSearchable={false}
    label="label"
    meta={Object {}}
    options={Array []}
  />
</UNDEFINED>
`;
